--- a/katas/gnu-emacs-lisp.org
+++ b/katas/gnu-emacs-lisp.org
@@ -1,5 +1,5 @@
 #+TITLE: GNU Emacs Lisp 编程入门
-
+Capture
 * 译者序
 C + Lisp -> GNU Emacs
 
@@ -10,7 +10,7 @@ C + Lisp -> GNU Emacs
 GNU Emacs 是一种 高级的 自带文档的 可定制的 可扩充的实时显示的 编辑器.
 
 斯托曼的这一天才的泛对称设计思想极富艺术性, 具有方法论研究的永久价值.
-
+  
 * 前言
 Emacs 就是为了使你能用 Emacs Lisp 编写新的代码并能方便地作为编辑器的扩展部分来安装而设计的.
 
@@ -431,7 +431,54 @@ plants
 
 * 找回文本
 * 循环和递归
+Emacs Lisp 有两种方式使一个表达式或一系列表达式不断被求值: 
+- 使用 while 循环
+- 使用 递归
+
+循环操作是很有价值的.
+
+** while
+while 特殊表对其第一个参量求值, 并测试这个返回值的真假.
+在 while 表达式中, 如果对其第一个参量的求值结果是 假, 则 Lisp 解释器跳过这个表达式的其余部分(表达式的主体)而不对它求值;
+如果第一个参量的返回值为 真, 则 Lisp 解释器就继续对这个表达式的主体求值, 然后再次测试 while 的第一个参量是否为真.
+如果第一个参量的返回值为 真, 则 Lisp 解释器再一次对表达式主体求值.
+
+循环本身不是目的, 但是在循环中表达式被求值才是重要的.
+
+*** while 循环和列表
+控制 while 循环的一个通用方法就是测试一个列表中是否还有元素. 如果有, 循环就重复下去; 如果没有, 循环就结束.
+
+#+BEGIN_SRC elisp
+(setq animals '(giraffe gazelle lion tiger))
+(defun print-elements-of-list (list)
+  "Print each element of LIST on a line of its own."
+  (while list
+    (print (car list))
+    (setq list (cdr list))))
+(print-elements-of-list animals)
+#+END_SRC
+*** 使用增量计数器的循环
+*** 使用减量计数器的循环
+** 递归
+递归函数, 就是自己调用自己的函数.
+当函数对其自身求值时, 它找到要求对自己求值的代码, 因此这个函数对它本身一次又一次地求值.
+除非递归函数提供一个停止自我调用的机制, 否则递归函数将永不停止地反复对自身求值.
+
+一个递归函数通常包含一个条件表达式, 这个条件表达式有三个部分:
+- 一个真假测试, 它决定函数是否继续调用自身, 这里称之为 do-again-test
+- 函数名
+- 一个表达式, next-step-expression
+
+递归函数能够比任何其他函数都简单.
+
+do-again-test 有时被称为 停止条件.
+
+*** 使用列表的递归函数
+*** 使用递归算法替代计数器
+
 * 正则表达式查询
+要记住的最重要的一点是, 正则表达式允许按一定的模式查询, 也允许完全按照字符串字面意义进行查询.
+
 * 计数: 重复和正则表达式
 * 统计函数定义中的单词数
 * 准备柱形图
