--- a/katas/learning-gnu-emacs.org
+++ b/katas/learning-gnu-emacs.org
@@ -87,6 +87,9 @@ Emacs 会提示用户在辅助输入区里输入文件名.
 C-h / C-h k/ C-h f
 
 * 文件编辑
+  :LOGBOOK:
+  CLOCK: [2018-05-03 Thu 09:27]
+  :END:
 ** 光标的移动
 ** 移动光标的其他方法
 ** 把光标一次移过一个或者多个屏显画面
